[package]
name = "rapace-http-tunnel"
version = "0.5.0"
edition = "2024"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "http-tunnel"
path = "src/main.rs"

# Helper binary for cross-process tests (acts as plugin)
[[bin]]
name = "http-tunnel-plugin"
path = "src/plugin_bin.rs"

# Baseline HTTP server for benchmarking (no rapace overhead)
[[bin]]
name = "http_baseline"
path = "src/baseline.rs"

# Host binary for benchmarking (cross-process)
[[bin]]
name = "http-tunnel-host"
path = "src/host_bin.rs"

[dependencies]
# Rapace crates
rapace = { path = "../../rust/rapace" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "net", "process", "time"] }

# facet for shapes (required by macro-generated code)
facet.workspace = true

# Plugin side: axum for HTTP routing (no tokio feature = no tokio-macros)
axum = { version = "0.8", default-features = false, features = ["http1", "tracing"] }
rapace-axum-serve = { path = "../../rust/rapace-axum-serve" }
bytes = "1"

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
color-eyre = "0.6"
eyre = "0.6"

[dev-dependencies]
# HTTP client for testing
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio-test-lite.workspace = true
