[package]
name = "rapace-service-registry-simple"
version = "0.5.0"
edition = "2024"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
anyhow = "1.0.100"
rapace = { path = "../../crates/rapace", features = ["stream"] }
rapace-cell = { path = "../../crates/rapace-cell" }
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "process", "time"] }
