[package]
name = "rapace-template-engine"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rapace-template-engine"
path = "src/main.rs"

# Helper binary for cross-process tests (acts as plugin)
[[bin]]
name = "template-engine-helper"
path = "src/helper.rs"

[dependencies]
rapace = { path = "../../crates/rapace" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "process"] }

# facet for shapes (required by macro-generated code)
facet = "0.32.1"
facet-core = "0.32.1"
facet-postcard = "0.32.1"
tracing = "0.1"

# Test utilities
rapace-testkit = { path = "../../crates/rapace-testkit" }
async-send-fd.workspace = true
libc.workspace = true
