[package]
name = "rapace-template-engine"
version = "0.5.0"
edition = "2024"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rapace-template-engine"
path = "src/main.rs"

# Helper binary for cross-process tests (acts as plugin)
[[bin]]
name = "template-engine-helper"
path = "src/helper.rs"

[dependencies]
rapace = { path = "../../rust/rapace" }
demo-helper-common = { path = "../demo-helper-common" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "net", "process"] }

[dev-dependencies]
async-send-fd.workspace = true
libc.workspace = true
tokio-test-lite.workspace = true
